# fixforward

./: .gitignore  POST.md  README.md  pyproject.toml
assets/: demo.tape  gen_gif.py
demo/broken_node/: index.js  package.json  test.js
demo/broken_python/: app.py  test_app.py
demo/broken_rust/: Cargo.toml
demo/broken_rust/src/: lib.rs
fixforward/: __init__.py  __main__.py  classifier.py  cli.py  copilot.py  detector.py  display.py  patcher.py  reporter.py  state.py  verifier.py
fixforward/parsers/: __init__.py  cargo_parser.py  npm_parser.py  pytest_parser.py
